CSS fix - broken wrapping of subjects and introducing ellipsis to shorten too long subject lines

--- a/shared-data/default-theme/css/default.css
+++ b/shared-data/default-theme/css/default.css
@@ -8231,6 +8231,9 @@ tr.modal-tag-picker-item td.checkbox {
 #pile-results td.subject a.item-subject {
   width: 370px;
   display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 /* This is because relative % positioning inside a table doesn't work
    * because the table does not yet know its own size.
